--- a/appointmentSystem/grails-app/assets/stylesheets/sheffsug.css
+++ b/appointmentSystem/grails-app/assets/stylesheets/sheffsug.css
@@ -1,9 +1,23 @@
 .first{
-    background-color:deepskyblue; 
+    background-color:deepskyblue;
+    border: 1px solid black;
+    display: inline-block;
+    width: 250px;
+    height: 250px;
+    margin-right: 10px;
+    margin-bottom: 10px; 
+    margin-left: 20px;
 }
 
 .second{
     background-color: springgreen;
+    border: 1px solid black;
+    display: inline-block;
+    width: 250px;
+    height: 250px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    margin-left: 20px;
 }
 
 h3 {
