--- a/appointmentSystem/grails-app/assets/stylesheets/sheffsug.css
+++ b/appointmentSystem/grails-app/assets/stylesheets/sheffsug.css
@@ -1,23 +1,26 @@
 .first{
     background-color:deepskyblue;
-    border: 1px solid black;
+    border: 2px solid black;
     display: inline-block;
     width: 250px;
     height: 250px;
     margin-right: 10px;
     margin-bottom: 10px; 
     margin-left: 20px;
+    text-align: center;
+    
 }
 
 .second{
     background-color: springgreen;
-    border: 1px solid black;
+    border: 2px solid black;
     display: inline-block;
     width: 250px;
     height: 250px;
     margin-right: 10px;
     margin-bottom: 10px;
     margin-left: 20px;
+    text-align: center;
 }
 
 h3 {
@@ -25,6 +28,7 @@ h3 {
     font-weight: bold;
     color: #333333;
     margin-bottom: 10px;
+    text-align: center;
   }
   
   p {
@@ -32,4 +36,5 @@ h3 {
     line-height: 1.5;
     color: #666666;
     margin-bottom: 20px;
+    text-align: center;
   }
