--- a/appointmentSystem/grails-app/assets/stylesheets/sheffsug.css
+++ b/appointmentSystem/grails-app/assets/stylesheets/sheffsug.css
@@ -1,12 +1,14 @@
 .first{
     background-color:deepskyblue;
     border: 2px solid black;
-    display: inline-block;
-    width: 250px;
+    display: inline-flex;
+    flex-wrap: wrap;
+    width: 300px;
     height: 250px;
+    margin-top: 10px;
     margin-right: 10px;
-    margin-bottom: 10px; 
-    margin-left: 20px;
+    margin-bottom: 10px;  
+    margin-left: 10px;
     text-align: center;
     
 }
@@ -14,13 +16,16 @@
 .second{
     background-color: springgreen;
     border: 2px solid black;
-    display: inline-block;
-    width: 250px;
+    display: inline-flex;
+    flex-wrap: wrap;
+    width: 300px;
     height: 250px;
+    margin-top: 10px;
     margin-right: 10px;
-    margin-bottom: 10px;
-    margin-left: 20px;
+    margin-bottom: 10px;  
+    margin-left: 10px;
     text-align: center;
+    
 }
 
 h3 {
